# guard

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  config.json
src/: app.cpp  client.c  client.cpp  endpoint.cpp  endpoint.h  server.c  server.cpp  tcp_socket.cpp  tcp_socket.h
src/client/: client.cpp  client.h  main.cpp  schedule.cpp  schedule.h  sender.cpp  sender.h  videocap.cpp  videocap.h
src/common/: session.cpp  session.h
src/manage/: main.cpp  manage.cpp  manage.h
src/server/: main.cpp  receiver.cpp  receiver.h  sender.cpp  sender.h  server.cpp  server.h
